--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "nanoid": "^3.2.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-custom-scroll": "^4.4.0",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "simplebar-react": "^2.3.6",
     "web-vitals": "^2.1.3"
   },
   "husky": {
@@ -61,6 +65,9 @@
   "devDependencies": {
     "@redux-devtools/core": "^3.11.0",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.5.1"
+    "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
+    "react-image-webp": "^0.8.0",
+    "webp-in-css": "^0.7.0"
   }
 }
