--- a/package.json
+++ b/package.json
@@ -12,18 +12,15 @@
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.2.1",
-    "nanoid": "^3.2.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-custom-scroll": "^4.4.0",
-    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "simplebar-react": "^2.3.6",
     "web-vitals": "^2.1.3"
   },
   "husky": {
